<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastroActivity" >
    
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
        
        <TextView 
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
            android:text="@string/Cad_OS_NUMBER"/>
    
    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
        
        <TextView 
        	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/Cad_OS_NameClient"/>
        
    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
        
        <TextView 
        	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/Cad_OS_END_START"/>
    </LinearLayout>
    	
    
    <LinearLayout android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
       
       <TextView 
        	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/Cad_OS_END_FINAL"/>
    </LinearLayout>
    
    
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
       
        <TextView 
        	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/Cad_OS_STATUS"/>
    </LinearLayout>
    
    
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
        
        <TextView 
        	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/Cad_OS_OBS"/>
    </LinearLayout>



</RelativeLayout>